<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.dhbw.rahmlab.openglpolyglot</groupId>
    <artifactId>OpenGLPolyglot</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <exec.mainClass>de.dhbw.rahmlab.openglpolyglot.Main</exec.mainClass>
    </properties>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.graalvm.sdk/graal-sdk -->
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>23.1.5</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>svm</artifactId>
            <version>23.1.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.orat.view3d</groupId>
            <artifactId>Euclid3DViewAPI</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.dhbw.rahmlab.openglpolyglot.Main</mainClass>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <build>
              <plugins>
                <plugin>
                  <groupId>org.graalvm.buildtools</groupId>
                  <artifactId>native-maven-plugin</artifactId>
                  <version>0.10.3</version>
                  <extensions>true</extensions>
                  <executions>
                    <execution>
                    <id>build-native</id>
                      <goals>
                        <goal>compile-no-fork</goal>
                      </goals>
                      <phase>package</phase>
                      <configuration>
                          <buildArgs>
                              <argument>-H:ConfigurationFileDirectories=config</argument>
                              <argument>-Djava.awt.headless=false</argument>
                              <argument>-Dsun.awt.enableExtraMouseButtons=false</argument>
                              <argument>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.c=ALL-UNNAMED</argument>
                              <argument>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.c.function=ALL-UNNAMED</argument>
                          </buildArgs>
                      </configuration>
                    </execution>
                    <execution>
                    <id>test-native</id>
                      <goals>
                        <goal>test</goal>
                      </goals>
                      <phase>test</phase>
                    </execution>
                  </executions>
                </plugin>
              </plugins>
            </build>
        </profile>
    </profiles>
</project>